<?xml version="1.0"?>
<package format="2">
  <name>fixed_areas_ssm</name>
  <version>0.0.0</version>
  <description>The fixed_areas_ssm package</description>

  <maintainer email="manuel.beschi@stiima.cnr.it">Manuel Beschi</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

<depend>subscription_notifier</depend>
<depend>rosparam_utilities</depend>

  <export>
  </export>
</package>
