<?xml version="1.0"?>
<package format="2">
  <name>velocity_scaling_multi_robot</name>
  <version>0.0.0</version>
  <description>The velocity_scaling_multi_robot package</description>
  <maintainer email="marco.faroni@stiima.cnr.it">hypatia</maintainer>
  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_state_controller_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>velocity_scaling_iso15066</build_depend>
  <build_export_depend>robot_state_controller_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>velocity_scaling_iso15066</build_export_depend>
  <exec_depend>robot_state_controller_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>velocity_scaling_iso15066</exec_depend>
  <depend>octomap</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
